ingress.yaml
# Path-based routing with rewrite

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /foo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: foo-service
                port:
                  number: 80
          - path: /bar(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bar-service
                port:
                  number: 80
